# daiflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  start.sh  stop.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
alembic/versions/: 0fde09830f02_add_mcp_servers_table.py  1832bfac2bd1_add_dev_preview_url_to_project_repos.py  4a9e1f2b8c3d_add_spec_doc_to_tasks.py  70995646c278_add_doc_link_fields_to_tasks.py  (+8 more)
daiflow/: agent_executor.py  config.py  database.py  main.py  models.py  schemas.py  session_ids.py  session_runner.py
daiflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
daiflow/routers/: ws.py  (+9 more)
docs/: Cody_sdk.md  DaiFlow_AgentRunner抽象层改造.md
electron/: electron-builder-nosign.yml  electron-builder.yml  package.json
frontend/: package-lock.json  package.json
pages/: docs.html  index.html  script.js  style.css
tests/: conftest.py  test_agent_executor.py  test_agents.py  test_api_conversations.py  test_api_dev_server.py  test_api_projects.py  test_api_settings.py  test_api_skills.py  test_api_tasks.py  test_chat_service.py  test_conversation_service.py  test_cursor_runner.py  test_dev_preview_proxy.py  test_dev_server_service.py  test_init_services.py  test_mcp_integration.py  test_models.py  test_run_all.py  test_service_coverage.py  test_services.py  test_session_runner.py  test_spec_agent.py  test_workflow.py
(+114 files in other folders)
