[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daiflow"
dynamic = ["version"]
description = "Local AI-powered programming workbench — requirement to MR in one workflow"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
  {name = "DaiFlow Contributors"},
]
keywords = ["ai", "developer-tools", "code-generation", "workflow", "llm"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.1.0",
    "cody-ai",
]

[project.urls]
Homepage = "https://github.com/CodyCodeAgent/daiflow"
Repository = "https://github.com/CodyCodeAgent/daiflow"
Issues = "https://github.com/CodyCodeAgent/daiflow/issues"
Changelog = "https://github.com/CodyCodeAgent/daiflow/blob/main/CHANGELOG.md"

[project.scripts]
daiflow = "daiflow.cli:cli"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
include = ["daiflow*"]
